<resources>
    <string name="Delete">Delete</string>
    <string name="Retrieve_Data">Retrieve Data</string>
    <string name="app_name">lawn-care</string>
    <string name="Enter_First_Name">Enter First Name</string>
    <string name="Enter_Last_Name">Enter Last Name</string>
    <string name="Enter_Description">Enter Description</string>
    <string name="Enter_Phone">Enter Phone Number</string>
    <string name="Enter_Website">Enter Website</string>
    <string name="Types_of_Work_Offered">Types of Work Offered</string>
    <string name="Do_not_have_an_Account">Don\'t have an Account</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="About">About</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Reset">Reset</string>
    <string name="Service">Service</string>
    <string name="Job_Seeker">Job Seeker</string>
    <string name="Please_Confirm_Password">Please Confirm Password</string>
    <string name="Show_Password">Show Password</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Zipcode">Zipcode</string>
    <string name="Job_Type">Job Type</string>
    <string name="Property_Size">Property Size</string>
    <string name="jobTest">Listings</string>
    <string name="title_jobList">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_map">Map</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="property_owner">Property Owner</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="description">Description</string>
    <string name="work_offer">Work Offer:</string>
    <string name="days_available">Days available:</string>
    <string name="time">Time:</string>
    <string name="website">Website</string>
    <string name="endTime">End Time</string>
    <string name="startTime">Start Time</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Tools_Availability">Do you have tools?</string>
    <string name="Required">Required*</string>
    <string name="ic_user">User Icon</string>
    <string name="ic_password">Password Icon</string>
    <string name="ic_goBack">Back Icon</string>
    <string name="Review">Review</string>
    <string name="Details">Details</string>
    <string name="ic_edit">Edit Icon</string>
    <string name="ic_default_user_image">Default User Image</string>
    <string name="ic_star1">First Star</string>
    <string name="ic_star2">Second Star</string>
    <string name="ic_star3">Third Star</string>
    <string name="ic_star4">Fourth Star</string>
    <string name="ic_star5">Fifth Star</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="search_workers">Search Workers</string>
    <string name="this_is_the_scroll_area">This is the Scroll Area</string>
    <string name="enter_query">Enter Query</string>
    <string name="lawn_care">Lawn-Care</string>
    <string name="defaulttext">DefaultText</string>
    <string name="address">Address:</string>
    <string name="property_size">Property Size:</string>
    <string name="work_needed">Work Needed:</string>
    <string name="equipment_available">Equipment Available?:</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
</resources>