<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".viewYourWorkerProfile"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/IV_User_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ic_default_user_image"
        android:background="@drawable/user_image_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/ic_user_color" />

    <TextView
        android:id="@+id/TV_workerName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textSize="25dp"
        android:textStyle="bold"
        android:padding="5dp"
         />

    <TextView
        android:id="@+id/TV_email"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/email"
        android:textSize="17dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/TV_description"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/phone"
        android:textSize="17dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/TV_phoneNum"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/description"
        android:textSize="17dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/TV_workOffer"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/work_offer"
        android:textSize="17dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/TV_daysAvailable"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/days_available"
        android:textSize="17dp"
        android:padding="5dp"
         />

    <TextView
        android:id="@+id/TV_startEndTime"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/time"
        android:textSize="17dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/TV_website"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/website"
        android:textSize="17dp"
        android:padding="5dp"
         />
</LinearLayout>