<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_jobList"
        android:name="com.example.lawn_care.ui.search.SearchFragment"
        android:label="@string/title_jobList"
        tools:layout="@layout/fragment_search_jobs" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lawn_care.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.lawn_care.ui.notifications.NotificationsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_notifications" />
</navigation>