<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_signupFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_signupFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/Enter_First_Name"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_signupLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_signupLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/Enter_Last_Name"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_signupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_signupEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/Enter_Email"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_signupPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_signupPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/enter_phone_number"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_signupPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="password_toggle"
        android:visibility="visible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_signupPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/Enter_Password"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_signupPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_signupPass2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:hint="@string/Please_Confirm_Password"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/WorkerOwnerRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/jobSeekerRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Job_Seeker" />

        <RadioButton
            android:id="@+id/clientRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/property_owner" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="ActivitySignIn"
            android:padding="10dp"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/btn_Reset"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="ResetAll"
            android:padding="10dp"
            android:text="@string/Reset" />

        <Button
            android:id="@+id/btn_Submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="signupSubmit"
            android:text="@string/Submit" />
    </LinearLayout>

</LinearLayout>