<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".PropertyOwner"
    android:background="@drawable/bg_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/Address"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/City"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="start"
            android:background="@drawable/edit_txt_layout"
            android:ems="10"
            android:layout_weight="2"
            android:entries="@array/USA_State"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ET_zipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:background="@drawable/edit_txt_layout"
            android:ems="10"
            android:layout_weight="3"
            android:hint="@string/Zipcode"
            android:padding="10dp"
            android:textColor="@color/BLACK"
            android:textColorHint="@color/BLACK"/>
    </LinearLayout>

    <EditText
        android:id="@+id/ET_PropertySize"
        android:hint="@string/Property_Size"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/edit_txt_layout"
        android:ems="10"
        android:padding="10dp"
        android:textColorHint="@color/BLACK"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TI_WorkOffered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconDrawable="@drawable/ic_add"
        app:endIconMode="custom"
        android:visibility="visible">

        <AutoCompleteTextView
            android:id="@+id/AC_WorkOffered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:focusable="true"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:hint="@string/Job_Type"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/BLACK" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/ET_JobType"
        android:hint="@string/Job_Type"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/edit_txt_layout"
        android:ems="10"
        android:padding="10dp"
        android:textColorHint="@color/BLACK"/>

    <EditText
        android:id="@+id/ET_Tools"
        android:hint="@string/Tools_Availability"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/edit_txt_layout"
        android:ems="10"
        android:padding="10dp"
        android:textColorHint="@color/BLACK"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="Cancel"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/btn_reset"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="ResetAll"
            android:text="@string/Reset" />

        <Button
            android:id="@+id/btn_submit"

            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="PostJob"
            android:text="@string/Submit" />
    </LinearLayout>

</LinearLayout>